--- a/templates/Base_Layout.html
+++ b/templates/Base_Layout.html
@@ -187,6 +187,16 @@ ul.container>li{
                تیکت های من
             </a>
              </li>
+             <li>
+                  <a href="{% url 'departments_list' %}">
+               دپارتمان ها
+            </a>
+             </li>
+             <li>
+                  <a href="{% url 'top_students' %}">
+               برترین دانشجویان
+            </a>
+             </li>
 
     </ul>
 </ul>
