--- a/auth_module/templates/Account_Activation_Email.html
+++ b/auth_module/templates/Account_Activation_Email.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="https://127.0.0.1/auth/activate_account/{{ act_code }}">
+<a href="http://127.0.0.1:8000/auth/activate_account/{{ act_code }}">
     برای فعالسازی حساب خود اینجا کلیک کنید
 </a>
 </body>
