--- a/templates/Base_Layout.html
+++ b/templates/Base_Layout.html
@@ -197,6 +197,11 @@ ul.container>li{
                برترین دانشجویان
             </a>
              </li>
+              <li>
+                  <a href="{% url 'student_exams' %}">
+               امتحانات مجازی
+            </a>
+             </li>
 
     </ul>
 </ul>
