--- a/templates/Base_Layout.html
+++ b/templates/Base_Layout.html
@@ -77,7 +77,7 @@ ul.container>li{
 <body>
 <section id="system_message">
 <div id="head">پیغام سیستم</div>
-    <div id="body">یک پیام از سکس</div>
+    <div id="body">ی</div>
     <p id="close">بستن</p>
 </section>
 <section id="head">
