--- a/news_module/templates/Index_Page.html
+++ b/news_module/templates/Index_Page.html
@@ -80,3 +80,11 @@
 </section>
 
 {% endblock %}
+{% block scripts %}
+<script>
+
+systemMessage.style.display='block';
+systemMessage.querySelector('div#body').innerHTML='کاربر'+'{{ user.username }}'+'خوش آمدید'
+</script>
+
+{% endblock %}
